[package]
name = "cpr_ihex"
description = "A graphical parser and editor for the Intel HEX binary format."
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/cpr_ihex"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
