[package]
name = "cpr_ihex"
description = "A graphical parser and editor for the Intel HEX binary format."
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/cpr_ihex"
repository = "https://github.com/cloone8/cpr_ihex"
version = "0.5.1"
edition = "2021"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "unwind"

[profile.dev]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", features = ["std", "release_max_level_info"] }
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.1"
hex = "0.4.3"
simplelog = "0.12.2"
anyhow = "1.0.81"
color-backtrace = "0.6.1"
rfd = "0.14.1"
egui_extras = "0.27.1"
strum = { version = "0.26.2", features = ["derive"] }
itertools = "0.12.1"
pretty-hex = "0.4.1"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
